Added Face Track

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "express": "latest",
         "socket.io":"latest",
         "socket.io-client":"latest",
-        "dronestream":"latest"
+        "dronestream":"latest",
+        "opencv":"~0.1.0"
     },
     "devDependencies": {
     },
